  years (Issue #3337)
* Remove ``extra_header`` and ``extra_footer`` from ``base`` theme
  due to incompatibility with Mako. The blocks are still available
  in ``bootstrap4`` and ``bootblog4``. (Issue #3319 via #3291)
* Show tracebacks when ``conf.py`` cannot be imported
* Fix loading complex config files that import modules (Issue #3314)
* Fix behavior of header demotion for negative values

Other compatibility information
-------------------------------

1. Nikola no longer requires logbook.  You may need to upgrade plugins.
2. If you receive an error stating that *sitemap is not a package*,
   you need to remove a leftover ``nikola/plugins/task/sitemap``
   directory (the full path is in the error message).

New in v8.0.3
=============

Features
--------

* Add Friulian translation by aoanla
* Add ``extra_header`` and ``extra_footer`` blocks to templates
  (Issue #3291)
* Add ``REST_FILE_INSERTION_ENABLED`` config option to enable or
  disable reST external file inclusion directives (Issue #3311)

Bugfixes
--------

* Support Markdown v3.x (Issue #3173)
* Fix galleries in Firefox Mobile and when resizing window
  (Issue #3258)
* Output ``<code>`` tag for double backticks in reST (Issue #3276)
* Fully switch to HTML5 writer for reST (Issue #3276,
  getnikola/plugins#294)
* Make ipynb listings work again
* Correctly link to listings with spaces in their names
* import_wordpress plugin doesn't require anymore a translation and
  can use nikola's default if none provided
* Wordpress+qtranslate import (--qtranslate option) now works with
  more recent versions of plugins from the qtranslate family (namely
  qtranslate-X)
* Fixed a wordpress import exception when image metadata has floats
  formated with ',' instead of '.'

New in v8.0.2
=============

Features
--------

* Make ``ARCHIVE_PATH``, ``ARCHIVE_FILENAME`` translatable
  (Issue #3234)
* Support configuring Isso via ``GLOBAL_CONTEXT['isso_config']``
  (Issue #3225)